--- a/mangowc-config/config.conf
+++ b/mangowc-config/config.conf
@@ -1,3 +1,59 @@
-# Example mangowc configuration
-# Launch autostart script for panels and tools
+# Example mangowc configuration with common options
+
+# Window effects
+blur=1
+blur_layer=1
+blur_optimized=1
+blur_params_num_passes=2
+blur_params_radius=5
+shadows=1
+shadow_only_floating=1
+border_radius=6
+focused_opacity=1.0
+unfocused_opacity=0.95
+
+# Animation settings
+animations=1
+animation_type_open=slide
+animation_type_close=slide
+animation_fade_in=1
+animation_fade_out=1
+animation_duration_move=500
+animation_duration_open=400
+animation_duration_close=800
+
+# Appearance
+gappih=5
+gappiv=5
+gappoh=10
+gappov=10
+borderpx=4
+rootcolor=0x201b14ff
+bordercolor=0x444444ff
+focuscolor=0xad741fff
+
+# Default layout and monitor
+layout=scroller
+monitorrule=eDP-1,0.55,1,scroller,0,1,0,0,1920,1080,60
+
+# Key bindings
+bind=SUPER,Return,spawn,foot
+bind=SUPER,Q,killclient
+bind=SUPER,Space,togglefloating
+bind=SUPER,F,togglefullscreen
+bind=SUPER,Left,focusdir,left
+bind=SUPER,Right,focusdir,right
+bind=SUPER,Up,focusdir,up
+bind=SUPER,Down,focusdir,down
+bind=SUPER,1,view,1
+bind=SUPER+SHIFT,1,tag,1
+bind=SUPER,r,reload_config
+
+# Mouse bindings
+mousebind=SUPER,btn_left,moveresize,curmove
+mousebind=SUPER,btn_right,moveresize,curresize
+mousebind=SUPER+CTRL,btn_right,killclient
+mousebind=NONE,btn_middle,togglemaxmizescreen,0
+
+# Autostart
 exec-once=~/.config/mango/autostart.sh
